# XHT_card

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_fallback.md  README_main.md  README_midi.md  README_midi_experimental.md  README_midi_fallback.md  THXCard.cpp  THXCard.uf2  THXCardDense.cpp  THXCardDense.uf2  THXCardMidi.cpp  THXCardMidi.uf2  THXCardMidiExperimental.cpp  THXCardMidiExperimental.uf2  THXCardMidiExperimental_pre_midi_fix.cpp  THXCardMidi_fallback.cpp  THXCard_fallback.cpp  THXCard_fallback.uf2  XHTCardMidi.cpp  XHTCardMidiExperimental_pre_midi_fix.cpp  XHTCardMidi_fallback.cpp  XHTCard_MIDI_test.mid  XHTCard_fallback.cpp  info.yaml  tusb_config.h  usb_descriptors.c  usb_midi_host.c  usb_midi_host.h  usb_midi_host_app_driver.c
uf2/: THXCardMidiExperimental_pre_midi_fix.uf2  XHTCard.uf2  XHTCardMidi.uf2  XHTCard_fallback.uf2
